# ILDbench_WWqqlnu

./: .gitignore  CMakeLists.txt  Readme.md
doc/: Readme.md  VariableDictionary.md
gGenAnalyze/: MakeHistograms.sh  MakePlotNew.C  MyClass.h  getfiles.sh  getfiles2.sh
graham/: GIT_NOTES.txt  NOTES  justinexport.sh  myexport.sh
graham/RobustResolution/: CalcPerformance.h  README  RobustScaleMetrics.h  Sampler.h  example  example.cpp  run.sh
lib/: libILDbench_WWqqlnu.so.1.0  libILDbench_WWqqlnu.so.1.0.0
macros/: AutoDict_TLorentzVector.cxx  AutoDict_TLorentzVector_cxx.d  AutoDict_TLorentzVector_cxx_ACLiC_dict_rdict.pcm  AutoDict_myclass.cxx  AutoDict_myclass_cxx.d  MakeFourPlots.sh  MakeHistograms.sh  MakePlotNew.C  MakePlots.sh  README  eventselectionplot.C  justin_plot.cpp  justin_plot_cpp.d  justin_plot_cpp_ACLiC_dict_rdict.pcm  myplot.C  myplot2.C  myplotp.C  overlayacceptance.C  tauplot.C
macros/TauOptimzationMacros/: Efficiency_Rejection.C  Efficiency_Rejection.py  Efficiency_Rejection_C.d  run_eff.sh
macros/WqqJetOptimizationmacros/: WqqOpt.C  WqqOpt_C.d  WqqOpt_C_ACLiC_dict_rdict.pcm  Wqqtree.C  Wqqtree.h  plotTools.C  plotter.C  plotter_C.d  plotter_C_ACLiC_dict_rdict.pcm
scripts/: .runall.sh.swp  4f_ZZ_semi_LR.xml  Signal.root  WWAnalysis.xml  cleanup.sh  gear_ILD_l5_v02_dd4hep.xml  run.sh  runFlavorOpt.py  runTauOpt.py  runTauOpt.sh  runall.sh  runall2.sh  runqqJetOpt.py  runv2-graham.py  runv2.py  testv2.py
scripts/steering/: 2f_Z_had_LR.xml  4f_WW_had_LR.xml  4f_WW_semi_LL_elec.xml  4f_WW_semi_LR.xml  4f_WW_semi_LR_elec.xml  4f_WW_semi_RL.xml  4f_WW_semi_RL_elec.xml  4f_WW_semi_RR_elec.xml  4f_ZZ_semi_LR.xml  MyWWAnalysis.xml
scripts/steeringMacros/: eeH  generateTauFinderXML.py
source/: CMakeLists.txt
source/include/: HistoManager.h  PandoraPfoVariables.h  ReconstructedOverlayRemoval.h  TauSelector.h  WWAnalysis.h  WWAnalysis2.h  anaVariables.h  classifyTau.h  eventVariables.h  fitJet.h  jetOverlay.h  jetVariables.h  linkdef.h  massFitter.h  mcVariables.h  mcVars.h  mva.h  overlayVariables.h  remainPfos.h  remainjet.h  tauCand.h  tauFinderVariables.h  tauJet.h
source/src/: .WWAnalysis2.cc.swp  HistoManager.cc  PandoraPFOVariables.cc  PandoraPfoVariables.cc  ReconstructedOverlayRemoval.cc  TauSelector.cc  WWAnalysis.cc  (+17 more)
(+392 files in other folders)
