########################################################
# cmake file for building ILDbench_WWqqlnu analysis package
# @author Ete Remi, DESY
CMAKE_MINIMUM_REQUIRED(VERSION 2.6 FATAL_ERROR)
########################################################

# project name
PROJECT( ILDbench_WWqqlnu )

# project version
SET( ${PROJECT_NAME}_VERSION_MAJOR 1 )
SET( ${PROJECT_NAME}_VERSION_MINOR 0 )
SET( ${PROJECT_NAME}_VERSION_PATCH 0 )

### DEPENDENCIES ############################################################
FIND_PACKAGE( ILCUTIL REQUIRED COMPONENTS ILCSOFT_CMAKE_MODULES )

# load default settings from ILCSOFT_CMAKE_MODULES
INCLUDE( ilcsoft_default_settings )

FIND_PACKAGE( Marlin 1.0 REQUIRED ) # minimum required Marlin version
INCLUDE_DIRECTORIES( SYSTEM ${Marlin_INCLUDE_DIRS} )
LINK_LIBRARIES( ${Marlin_LIBRARIES} )
ADD_DEFINITIONS( ${Marlin_DEFINITIONS} )

FIND_PACKAGE( DD4hep )
INCLUDE_DIRECTORIES( SYSTEM ${DD4hep_INCLUDE_DIRS} )
LINK_LIBRARIES( ${DD4hep_LIBRARIES} )
ADD_DEFINITIONS( ${DD4hep_DEFINITIONS} )

FIND_PACKAGE( MarlinUtil 1.0 REQUIRED ) # minimum required MarlinUtil version
INCLUDE_DIRECTORIES( SYSTEM ${MarlinUtil_INCLUDE_DIRS} )
LINK_LIBRARIES( ${MarlinUtil_LIBRARIES} )
ADD_DEFINITIONS( ${MarlinUtil_DEFINITIONS} )

#FIND_PACKAGE( ROOT REQUIRED ) 
#INCLUDE_DIRECTORIES( SYSTEM ${ROOT_INCLUDE_DIRS} )
#LINK_LIBRARIES( ${ROOT_LIBRARIES} )
#ADD_DEFINITIONS( ${ROOT_DEFINITIONS} )

FIND_PACKAGE( MarlinKinfit REQUIRED )
INCLUDE_DIRECTORIES(SYSTEM ${MarlinKinfit_INCLUDE_DIRS} )
LINK_LIBRARIES( ${MarlinKinfit_LIBRARIES} )

FIND_PACKAGE( CLHEP REQUIRED )
INCLUDE_DIRECTORIES(SYSTEM ${CLHEP_INCLUDE_DIRS} )
LINK_LIBRARIES( ${CLHEP_LIBRARIES} ) 

FIND_PACKAGE( GSL 1.12 REQUIRED )
INCLUDE_DIRECTORIES(SYSTEM ${GSL_INCLUDE_DIRS} )
LINK_LIBRARIES( ${GSL_LIBRARIES} )

FIND_PACKAGE( ROOT 5.0 )
IF( ROOT_FOUND )
    INCLUDE_DIRECTORIES( ${ROOT_INCLUDE_DIRS} )
    LINK_LIBRARIES( ${ROOT_LIBRARIES} )
    ADD_DEFINITIONS( -DMARLIN_USE_ROOT )
    MESSAGE( STATUS "ROOT -- found" )
ELSE()
    MESSAGE( STATUS "ROOT -- not found" )
ENDIF()

# Compile you project
ADD_SUBDIRECTORY( source )

# display some variables and write them to cache
DISPLAY_STD_VARIABLES()
